k8s/asgard/apps/semaphore/namespace.yaml
# k8s/asgard/apps/semaphore/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: semaphore
