k8s/asgard/apps/semaphore/service.yaml
# k8s/asgard/apps/semaphore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  namespace: semaphore
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: semaphore
  ports:
    - name: http
      port: 80
      targetPort: 3000
